# bot

./: README.md  logs.txt  main.py  pyproject.toml
.github/workflows/: run.yml
src/: main.py  removal_comment.md  removal_message.md
