[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
praw = "^7.7.1"   # for Reddit API

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"    # to format the code
ruff = "^0.5.1"      # to lint the code
isort = "^5.13.2"    # to sort imports
pyright = "^1.1.371" # for static type checking

[tool.black]
line-length = 88 # maximum line length
preview = true # to allow enable-unstable-feature
enable-unstable-feature = [
    "string_processing",
] # to break strings into multiple lines

[tool.isort]
profile = "black"

[tool.pyright]
reportIncompatibleVariableOverride = false # disable this error type
reportIncompatibleMethodOverride = false   # disable this error type
ignore = ["**/tinytex-release/"]
